exports[`SearchableSelect [common] example testing should match snapshot(s) for 01.basic 1`] = `
<DropMenu
  className="lucid-SearchableSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  isLoading={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  optionContainerStyle={
    Object {
      "maxHeight": "200",
    }
  }
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SearchableSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SearchableSelect-Control-content">
        Select State
      </span>
      <CaretIcon
        direction="down"
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Header
    className="lucid-SearchableSelect-Search-container">
    <SearchField
      isDisabled={false}
      onChange={[Function]}
      onSubmit={[Function]}
      value={null} />
  </DropMenu.Header>
  <DropMenu.OptionGroup
    isHidden={false}>
    PST
    <SearchableSelect.Option
      value="CA">
      California
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NV">
      Nevada
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="OR">
      Oregon
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="WA">
      Washington
    </SearchableSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      value="CA">
      California
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="NV">
      Nevada
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="OR">
      Oregon
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="WA">
      Washington
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.OptionGroup
    isHidden={false}>
    MST
    <SearchableSelect.Option
      value="CO">
      Colorado
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="ID">
      Idaho
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MT">
      Montana
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NM">
      New Mexico
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="ND">
      North Dakota
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="SD">
      South Dakota
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="WI">
      Wisconsin
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="WY">
      Wyoming
    </SearchableSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      value="CO">
      Colorado
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="ID">
      Idaho
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="MT">
      Montana
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="NM">
      New Mexico
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="ND">
      North Dakota
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="SD">
      South Dakota
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="WI">
      Wisconsin
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="WY">
      Wyoming
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.OptionGroup
    isHidden={false}>
    CST
    <SearchableSelect.Option
      value="AR">
      Arkansas
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="IL">
      Illinois
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="IN">
      Indiana
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="IA">
      Iowa
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="KS">
      Kansas
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="KY">
      Kentucky
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MI">
      Michigan
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MN">
      Minnesota
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MS">
      Mississippi
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MO">
      Missouri
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NE">
      Nebraska
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="OH">
      Ohio
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="OK">
      Oklahoma
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="TN">
      Tennessee
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="TX">
      Texas
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="UT">
      Utah
    </SearchableSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      value="AR">
      Arkansas
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="IL">
      Illinois
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="IN">
      Indiana
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="IA">
      Iowa
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="KS">
      Kansas
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="KY">
      Kentucky
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="MI">
      Michigan
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="MN">
      Minnesota
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="MS">
      Mississippi
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="MO">
      Missouri
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="NE">
      Nebraska
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="OH">
      Ohio
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="OK">
      Oklahoma
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="TN">
      Tennessee
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="TX">
      Texas
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="UT">
      Utah
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.OptionGroup
    isHidden={false}>
    EST
    <SearchableSelect.Option
      value="AL">
      <span>
        USA: 
      </span>
      Alabama
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="AZ">
      Arizona
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="CT">
      Connecticut
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="DE">
      Delaware
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="DC">
      District Of Columbia
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="FL">
      Florida
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="GA">
      Georgia
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="LA">
      Louisiana
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="ME">
      Maine
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MD">
      Maryland
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MA">
      Massachusetts
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NH">
      New Hampshire
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NJ">
      New Jersey
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NY">
      New York
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NC">
      North Carolina
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="PA">
      Pennsylvania
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="RI">
      Rhode Island
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="SC">
      South Carolina
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="VT">
      Vermont
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="VA">
      Virginia
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="WV">
      West Virginia
    </SearchableSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      value="AL">
      <span>
        USA: 
      </span>
      Alabama
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="AZ">
      Arizona
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="CT">
      Connecticut
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="DE">
      Delaware
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="DC">
      District Of Columbia
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="FL">
      Florida
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="GA">
      Georgia
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="LA">
      Louisiana
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="ME">
      Maine
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="MD">
      Maryland
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="MA">
      Massachusetts
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="NH">
      New Hampshire
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="NJ">
      New Jersey
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="NY">
      New York
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="NC">
      North Carolina
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="PA">
      Pennsylvania
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="RI">
      Rhode Island
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="SC">
      South Carolina
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="VT">
      Vermont
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="VA">
      Virginia
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      value="WV">
      West Virginia
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.Option
    isDisabled={false}
    value="AK">
    Alaska
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    value="HI">
    Hawaii
  </DropMenu.Option>
</DropMenu>
`;

exports[`SearchableSelect [common] example testing should match snapshot(s) for 02.loading 1`] = `
<DropMenu
  className="lucid-SearchableSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  isLoading={true}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  optionContainerStyle={
    Object {
      "maxHeight": "200",
    }
  }
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SearchableSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SearchableSelect-Control-content">
        Select State
      </span>
      <CaretIcon
        direction="down"
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Header
    className="lucid-SearchableSelect-Search-container">
    <SearchField
      isDisabled={false}
      onChange={[Function]}
      onSubmit={[Function]}
      value={null} />
  </DropMenu.Header>
  <DropMenu.Option
    className="lucid-SearchableSelect-Loading"
    isDisabled={true}>
    <LoadingIcon
      aspectRatio="xMidYMid meet"
      isBadge={false}
      isDisabled={false}
      size={16}
      speed="normal"
      viewBox="0 0 16 16" />
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="AL">
    Alabama
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="AK">
    Alaska
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="AZ">
    Arizona
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="AR">
    Arkansas
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="CA">
    California
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="CO">
    Colorado
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="CT">
    Connecticut
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="DE">
    Delaware
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="DC">
    District Of Columbia
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="FL">
    Florida
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="GA">
    Georgia
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="HI">
    Hawaii
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="ID">
    Idaho
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="IL">
    Illinois
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="IN">
    Indiana
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="IA">
    Iowa
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="KS">
    Kansas
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="KY">
    Kentucky
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="LA">
    Louisiana
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="ME">
    Maine
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="MD">
    Maryland
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="MA">
    Massachusetts
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="MI">
    Michigan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="MN">
    Minnesota
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="MS">
    Mississippi
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="MO">
    Missouri
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="MT">
    Montana
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="NE">
    Nebraska
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="NV">
    Nevada
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="NH">
    New Hampshire
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="NJ">
    New Jersey
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="NM">
    New Mexico
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="NY">
    New York
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="NC">
    North Carolina
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="ND">
    North Dakota
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="OH">
    Ohio
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="OK">
    Oklahoma
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="OR">
    Oregon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="PA">
    Pennsylvania
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="RI">
    Rhode Island
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="SC">
    South Carolina
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="SD">
    South Dakota
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="TN">
    Tennessee
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="TX">
    Texas
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="UT">
    Utah
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="VT">
    Vermont
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="VA">
    Virginia
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="WA">
    Washington
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="WV">
    West Virginia
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="WI">
    Wisconsin
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    value="WY">
    Wyoming
  </DropMenu.Option>
</DropMenu>
`;

exports[`SearchableSelect [common] example testing should match snapshot(s) for 03.custom-search-placeholder 1`] = `
<DropMenu
  className="lucid-SearchableSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  isLoading={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  optionContainerStyle={
    Object {
      "maxHeight": "200",
    }
  }
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SearchableSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SearchableSelect-Control-content">
        Select Color
      </span>
      <CaretIcon
        direction="down"
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Header
    className="lucid-SearchableSelect-Search-container">
    <SearchField
      isDisabled={false}
      onChange={[Function]}
      onSubmit={[Function]}
      placeholder="Type here to filter..."
      value={null} />
  </DropMenu.Header>
  <DropMenu.Option
    isDisabled={false}>
    Blue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}>
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}>
    Orange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}>
    Red
  </DropMenu.Option>
</DropMenu>
`;
